--- a/app/index.html
+++ b/app/index.html
@@ -1239,7 +1239,7 @@
               <div class="footer__col-title">
                 Подпишись на нас
               </div>
-              <ul class="footer__social-link">
+              <ul class="footer__social-link social__icons">
                 <li><a class="link-facebook" href="#"></a></li>
                 <li><a class="link-tweeter" href="#"></a></li>
                 <li><a class="link-youtube" href="#"></a></li>
