--- a/app/new-items.html
+++ b/app/new-items.html
@@ -789,42 +789,6 @@
                       <span>Radius</span>
                     </a>
                     <div class="products__item-star">
-                      <div class="rate-star"></div> <span>05</span>)
-                    </div>
-                    <div class="products__item-opinion">
-                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
-                      <div class="icon-heart-o">(<span>20</span>)</div>
-                    </div>
-                  </div>
-                </div>
-                <!-- /.products-__item -->
-
-                <div class="products__item">
-                  <a class="products__item-img" href="#"
-                    style="background-image: url(images/content/products-item-1.jpg);"></a>
-                  <div class="products__item-content">
-                    <div class="products__item-name">
-                      <a class="products__item-title" href="#">
-                        Responsive Mobile APP
-                      </a>
-                      <a class="products__item-category" href="#">
-                        Site Template
-                      </a>
-                      <div class="products__item-text">
-                        Здесь будет описание вашего товара
-                      </div>
-                    </div>
-                    <div class="products__item-price">
-                      $19
-                      <span class="">Купили ( 51 )</span>
-                    </div>
-                  </div>
-                  <div class="products__item-info">
-                    <a class="products__item-author" href="#">
-                      <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
-                      <span>Radius</span>
-                    </a>
-                    <div class="products__item-star">
                       <div class="rate-star"></div> (<span>05</span>)
                     </div>
                     <div class="products__item-opinion">
@@ -897,7 +861,43 @@
                       <span>Radius</span>
                     </a>
                     <div class="products__item-star">
-                      <div class="rate-star"></div> <span>05</span>)
+                      <div class="rate-star"></div> (<span>05</span>)
+                    </div>
+                    <div class="products__item-opinion">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- /.products-__item -->
+
+                <div class="products__item">
+                  <a class="products__item-img" href="#"
+                    style="background-image: url(images/content/products-item-1.jpg);"></a>
+                  <div class="products__item-content">
+                    <div class="products__item-name">
+                      <a class="products__item-title" href="#">
+                        Responsive Mobile APP
+                      </a>
+                      <a class="products__item-category" href="#">
+                        Site Template
+                      </a>
+                      <div class="products__item-text">
+                        Здесь будет описание вашего товара
+                      </div>
+                    </div>
+                    <div class="products__item-price">
+                      $19
+                      <span class="">Купили ( 51 )</span>
+                    </div>
+                  </div>
+                  <div class="products__item-info">
+                    <a class="products__item-author" href="#">
+                      <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                      <span>Radius</span>
+                    </a>
+                    <div class="products__item-star">
+                      <div class="rate-star"></div> (<span>05</span>)
                     </div>
                     <div class="products__item-opinion">
                       <a class="icon-comment-o" href="#">(<span>10</span>)</a>
@@ -981,7 +981,7 @@
               <div class="footer__col-title">
                 Подпишись на нас
               </div>
-              <ul class="footer__social-link">
+              <ul class="footer__social-link social__icons">
                 <li><a class="link-facebook" href="#"></a></li>
                 <li><a class="link-tweeter" href="#"></a></li>
                 <li><a class="link-youtube" href="#"></a></li>
