--- a/app/settings-personal.html
+++ b/app/settings-personal.html
@@ -340,7 +340,7 @@
         <div class="container">
           <div class="product-one__tabs settings__tabs">
             <div class="tabs">
-              <span class="tab angle-right active" data-id="1">Персональная информация</span>
+              <span class="tab angle-right active" data-id="1">Информация</span>
               <span class="tab angle-right" data-id="2">Профиль</span>
               <span class="tab angle-right" data-id="3">Бэйджы</span>
               <span class="tab angle-right" data-id="4">E-mail</span>
@@ -350,7 +350,7 @@
               <div class="tab-item active-tab" id="1">
                 <div class="page__box">
                   <div class="page__box-title">
-                    Персональная информация
+                    Информация
                   </div>
                   <div class="page__box-content">
                     <form>
@@ -428,7 +428,7 @@
               <div class="tab-item" id="2">
                 <div class="page__box">
                   <div class="page__box-title">
-                    Персональная информация
+                    Информация
                   </div>
                   <div class="page__box-content">
                     <form>
@@ -462,7 +462,7 @@
               <div class="tab-item" id="3">
                 <div class="page__box">
                   <div class="page__box-title">
-                    Персональная информация
+                    Информация
                   </div>
                   <div class="page__box-content">
                     <form>
@@ -515,7 +515,7 @@
               <div class="tab-item" id="4">
                 <div class="page__box">
                   <div class="page__box-title">
-                    Персональная информация
+                    Информация
                   </div>
                   <div class="page__box-content">
                     <form>
@@ -573,7 +573,7 @@
               <div class="tab-item" id="5">
                 <div class="page__box">
                   <div class="page__box-title">
-                    Персональная информация
+                    Информация
                   </div>
                   <div class="page__box-content">
                     <form>
@@ -691,7 +691,7 @@
               <div class="footer__col-title">
                 Подпишись на нас
               </div>
-              <ul class="footer__social-link">
+              <ul class="footer__social-link social__icons">
                 <li><a class="link-facebook" href="#"></a></li>
                 <li><a class="link-tweeter" href="#"></a></li>
                 <li><a class="link-youtube" href="#"></a></li>
