--- a/app/new-items.html
+++ b/app/new-items.html
@@ -215,9 +215,9 @@
                     </ul>
                   </div>
                 </div>
-                <a class="header__btn header__btn-login header__btn--on" href="#">login</a>
-                <a class="header__btn header__btn-logout header__btn--off" href="#">logout</a>
-                <a class="header__btn header__btn-register header__btn--on" href="#">Register</a>
+                <a class="header__btn header__btn-login header__btn--off" href="#">login</a>
+                <a class="header__btn header__btn-logout header__btn--on" href="#">logout</a>
+                <a class="header__btn header__btn-register header__btn--off" href="#">Register</a>
               </div>
               <!-- /.header__box -->
               <div class="header__btn-menu icon-user">
