fixed select arrow color on page: settings&one-product

--- a/app/product-one.html
+++ b/app/product-one.html
@@ -513,8 +513,8 @@
                   </div>
                   <form>
                     <select>
-                      <option>Regular</option>
-                      <option>Premium</option>
+                      <option>Регуляр</option>
+                      <option>Вип</option>
                     </select>
                   </form>
                 </div>
