--- a/app/upload.html
+++ b/app/upload.html
@@ -401,7 +401,7 @@
               </div>
               <div class="upload__inner-content">
                 <div class="upload-line">
-                  <label>Регулярная</label>
+                  <label>Регуляр</label>
                   <input type="text" placeholder="$00.00" required>
                 </div>
 
