--- a/app/product-one.html
+++ b/app/product-one.html
@@ -383,8 +383,8 @@
                       <li class="angle-right">стильный</li>
                       <li class="angle-right">недорогой</li>
                       <li class="angle-right">качественный</li>
-                      <li class="angle-right">full HD+</li>
-                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">адаптивный</li>
+                      <li class="angle-right">Лучший на этой неделе</li>
                       <li class="angle-right">Топ 5 месяца</li>
                     </ul>
                   </div>
@@ -395,12 +395,12 @@
                       <li class="angle-right">стильный</li>
                       <li class="angle-right">недорогой</li>
                       <li class="angle-right">качественный</li>
-                      <li class="angle-right">full HD+</li>
-                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">адаптивный</li>
+                      <li class="angle-right">Лучший на этой неделе</li>
                       <li class="angle-right">Топ 5 месяца</li>
                       <li class="angle-right">качественный</li>
-                      <li class="angle-right">full HD+</li>
-                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">адаптивный</li>
+                      <li class="angle-right">Лучший на этой неделе</li>
                       <li class="angle-right">Топ 5 месяца</li>
                     </ul>
                   </div>
@@ -409,8 +409,8 @@
                     <ul class="tab-item__list">
                       <li class="angle-right">современный</li>
                       <li class="angle-right">стильный</li>
-                      <li class="angle-right">full HD+</li>
-                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">адаптивный</li>
+                      <li class="angle-right">Лучший на этой неделе</li>
                       <li class="angle-right">Топ 5 месяца</li>
                     </ul>
                   </div>
@@ -422,7 +422,7 @@
                       <li class="angle-right">недорогой</li>
                       <li class="angle-right">качественный</li>
                       <li class="angle-right">Премия 2019</li>
-                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">Лучший на этой неделе</li>
                       <li class="angle-right">Топ 5 месяца</li>
                     </ul>
                   </div>
